фикс бага тест